start implementing post message

--- a/views/index.pug
+++ b/views/index.pug
@@ -84,7 +84,7 @@ block content
                                         p @#{user.screen_name}
                                 |
                                 .circle--fluid--cell
-                                    a.button.button-text(id=user.id) Unfollow
+                                    a.button.button-text(href="/?unfollow=" + user.id) Unfollow
 
             |
         .grid-33
