--- a/views/partials/_sendtweet.pug
+++ b/views/partials/_sendtweet.pug
@@ -5,7 +5,7 @@
                 .app--avatar(style='background-image: url(images/m-spore.png)')
                     img(src='images/m-spore.png')
 
-                textarea#tweet-textarea.circle--textarea--input(placeholder="What's happening?")
+                textarea.circle--textarea--input(placeholder="What's happening?", name="tweettextarea", id="tweettextarea")
 
                 strong#tweet-char.app--tweet--char 140
 
