--- a/views/index.pug
+++ b/views/index.pug
@@ -84,7 +84,7 @@ block content
                                         p @#{user.screen_name}
                                 |
                                 .circle--fluid--cell
-                                    a.button.button-text(href="/?unfollow=" + user.id) Unfollow
+                                    a.button.button-text(src="/?unfollow=" + user.id) Unfollow
 
             |
         .grid-33
@@ -103,5 +103,5 @@ block content
                                     |
                                     p.app--message--text #{message.text}
                                     |
-                                    p.app--message--timestamp #{message.sender.created_at.slice(0,10)} hours ago
+                                    p.app--message--timestamp #{message.sender.created_at.slice(0,10)}
                                 |
