--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,6 +2,7 @@ doctype html
 html(lang='en')
     include ./partials/_head.pug
     body
+        include ./partials/_header.pug
         include ./partials/_sendtweet.pug
         block content
 
