--- a/views/partials/_header.pug
+++ b/views/partials/_header.pug
@@ -1,4 +1,4 @@
-header.circle--header
+header.circle--header(style='background-image: url(' + profile_banner + ')')
     .bounds
         .circle--fluid
             .circle--fluid--cell
