--- a/views/error.pug
+++ b/views/error.pug
@@ -2,4 +2,6 @@ extends ./layout.pug
 block content
     h1 #{message}
     h2 #{status}
+    h2 There was an error.
+        a(href='/') Try again here
     p #{error}
