--- a/views/partials/_sendtweet.pug
+++ b/views/partials/_sendtweet.pug
@@ -3,8 +3,8 @@
     form(action='/', method='POST')
         .circle--fluid
             .circle--fluid--cell.circle--fluid--primary.align-bottom.app--tweet--post
-                .app--avatar(style='background-image: url(images/m-spore.png)')
-                    img(src='images/m-spore.png')
+                .app--avatar(style='background-image: url(' + profile_image + ')')
+                    img(src=profile_image)
 
                 textarea.circle--textarea--input(placeholder="What's happening?", name="tweettextarea", id="tweettextarea")
 
