added comments, cleaned up old files

--- a/views/error.pug
+++ b/views/error.pug
@@ -1,7 +1,6 @@
 extends ./layout.pug
 block content
-    h1 #{message}
+    h1 There was an error.
+    a(href='/') Try something else here.
     h2 #{status}
-    h2 There was an error.
-        a(href='/') Try again here
     p #{error}
