--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,3 +6,18 @@ html(lang='en')
         include ./partials/_sendtweet.pug
         block content
 
+        // jQuery
+        script(src="https://code.jquery.com/jquery-3.2.1.min.js"
+                    integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+                    crossorigin="anonymous")
+
+        // custom JS
+        script(src="js/main.js")
+
+        // IO
+        script(type="application/javascript", src="https://cdn.socket.io/socket.io-1.4.5.js")
+
+        // Bootstrap Core JavaScript
+        // script(src='/static/js/bootstrap.min.js')
+        // Plugins JavaScript
+        // script(src='/static/js/jquery.easing.min.js')
